Regression: apply data transfer crash #101583

Closed
opened 2022-10-04 04:53:34 +02:00 by Nahuel Belich · 9 comments

System Information
Operating system: Linux-5.15.0-48-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.103.01

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-04 00:19, hash: 22c3db72ca
Worked: 3.3.0 0759f671ce (as far as i know didn't test other builds)

Caused by 21f2bacad9

Short description of error
if the data trasnfer its applied in an object that has shape keys blender crash.

Exact steps for others to reproduce the error
bug_apply data transfer .blend

  • There are two cubes there, one with vertex groups(original_with_weigths) and the other that has the data transfer modifier ("apply_data transfer in this one")
    image.png
  • select the object "apply_data transfer in this one" if its not selected
    image.png
    Try Ctrl+A or applying the modifier using the option in the modifier menu.
    Crash!
**System Information** Operating system: Linux-5.15.0-48-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.103.01 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-04 00:19, hash: `22c3db72ca` Worked: 3.3.0 0759f671ce1f (as far as i know didn't test other builds) Caused by 21f2bacad9 **Short description of error** if the data trasnfer its applied in an object that has shape keys blender crash. **Exact steps for others to reproduce the error** [bug_apply data transfer .blend](https://archive.blender.org/developer/F13612434/bug_apply_data_transfer_.blend) - There are two cubes there, one with vertex groups(original_with_weigths) and the other that has the data transfer modifier ("apply_data transfer in this one") ![image.png](https://archive.blender.org/developer/F13612438/image.png) - select the object "apply_data transfer in this one" if its not selected ![image.png](https://archive.blender.org/developer/F13612441/image.png) Try Ctrl+A or applying the modifier using the option in the modifier menu. Crash!
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Pratik Borhade self-assigned this 2022-10-04 08:38:40 +02:00
Member

Thanks for the report. I can confirm. Will check

Thanks for the report. I can confirm. Will check
Member

Added subscribers: @HooglyBoogly, @lichtwerk

Added subscribers: @HooglyBoogly, @lichtwerk
Member

Caused by 21f2bacad9

CC @HooglyBoogly

Caused by 21f2bacad9 CC @HooglyBoogly
Philipp Oeser changed title from apply data transfer crash to Regression: apply data transfer crash 2022-10-04 11:20:37 +02:00
Pratik Borhade removed their assignment 2022-10-04 12:01:51 +02:00
Hans Goudey self-assigned this 2022-10-04 14:39:04 +02:00

This issue was referenced by 8102510482

This issue was referenced by 8102510482362e83f509d90b86d31a10168ad72c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Thanks for the report and the triaging!

Thanks for the report and the triaging!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101583
No description provided.