Fix T101583: Issues applying modifier to mesh with shape keys

The wrong mesh was used to read the position attribute. Also, there was
always a warning about missing shape keys when that wasn't the case.